flags and bugfixes

--- a/JavaGrader/JavaGrader.csproj
+++ b/JavaGrader/JavaGrader.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Flags.cs" />
     <Compile Include="GradingInput.cs" />
     <Compile Include="JavaProject.cs" />
     <Compile Include="JDK.cs" />
